# sk-agentic-research

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README.zh.md  config.yaml  docker-compose.yml  nginx.conf  package-lock.json  package.json  prompts.yaml  pyproject.toml  requirements.txt  start.sh  test_system.py  verify_deps.py  作品提交要求.md  大赛报名通知.md  第一轮作品提交表单.md
backend/: __init__.py  cli.py  demo.py  desktop.py  doctor.py  main.py  orchestrator.py
backend/api/: __init__.py  dependencies.py  process_manager.py  schemas.py  webapp.py
backend/api/routers/: __init__.py  artifacts.py  config.py  logs.py  providers.py  runs.py  system.py
backend/core/: __init__.py  config.py  locking.py  provider_settings.py  runs.py  storage.py
backend/domain/: __init__.py  models.py
backend/infrastructure/: __init__.py  code_policy.py  executors.py  llm.py  process.py  prompts.py  search.py
backend/research/: __init__.py  experiments.py  hypotheses.py  improvement.py  literature.py  planning.py  validation.py  writing.py
backend/static/: index.html
backend/static/assets/: index-BV1r50MF.js  index-B_VsNQS5.css  index-BizrIih4.css  index-C5IyJEkJ.js  index-CnrkT-5V.js  index-CwZp8JX_.css  index-DLMsQxgu.js  index-DtuoCCwi.css  index-Dtx2AQTY.css  index-S1QGTSFp.js
backend/workflow/: __init__.py  engine.py  factory.py
docs/: architecture.zh.md  deployment.zh-CN.md  desktop.zh.md  research-protocol.zh.md  security.zh.md  semantic-scholar-api-key.zh.md
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx  main.tsx  theme.ts
frontend/src/api/: client.js
frontend/src/components/: AppShell.jsx  AppShell.tsx  LanguageSwitcher.tsx  PageHeader.jsx  PageHeader.tsx  ProviderSettings.jsx  ProviderSettings.tsx  RunCard.jsx  RunCard.tsx  StatusBadge.jsx  ThemeSwitcher.tsx
frontend/src/hooks/: useRunStream.js  useRunStream.ts
frontend/src/i18n/: index.js  index.ts
frontend/src/pages/: DashboardPage.jsx  DashboardPage.tsx  IdeasPage.jsx  LogsPage.jsx  PapersPage.jsx  (+3 more)
research_system/: orchestrator.py
research_system/agents/: experiment_agent.py  ideation_agent.py  llm_client.py  planning_agent.py  writing_agent.py
scripts/: build_desktop_sidecar.py  check-i18n.mjs  run-python.mjs
src/: orchestrator.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/agents/: experiment_agent.py  ideation_agent.py  planning_agent.py  writing_agent.py
tests/: test_architecture.py  test_code_policy.py  test_config.py  test_demo.py  test_extract_json.py  test_llm_providers.py  test_notebook_executor.py  test_process.py  test_provider_settings.py  test_storage.py  test_validation.py  test_webapp.py  test_writing.py
(+3 files in other folders)
