[package]
name = "papermill-desktop"
version = "0.2.0"
description = "Local-first Papermill AI research workflow desktop application"
authors = ["SK Studio"]
license = "GPL-3.0-only"
repository = "https://github.com/sihuangtech/papermill"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "papermill_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
uuid = { version = "1.20.0", features = ["v4"] }
